add swagger-ui add api-key option for server
