# api/v1/swagger/ev.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "ev.proto",
+    "title": "Email Validator",
     "version": "0.0.1"
   },
   "consumes": [
@@ -365,5 +365,17 @@
       ],
       "default": "CHECK_IF_EMAIL_EXIST"
     }
-  }
+  },
+  "securityDefinitions": {
+    "BearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "security": [
+    {
+      "BearerAuth": []
+    }
+  ]
 }
